--- a/index.html
+++ b/index.html
@@ -23,50 +23,51 @@
 
 
 
-    <main class="hero">
-        </div>
-        <div class="content">
+    <div class="hero">
+    </div>
 
-            <section class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
-                    alt="Desk with a laptop and a notebook brainstorming SEO business model" /><img>
-                <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they
-                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                    your visibility and find the right customers for your business.
-                </p>
-            </section>
+    <main class="content">
 
-
-            <section id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right"
-                    alt="Laptop displaying Reputation bar graph showing an improvement overtime" /><img>
-                <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                    internet connection to say whatever they want about your business. Online Reputation Management
-                    gives
-                    you the control over what potential customers see when they search for your business.
-                </p>
-            </section>
+        <section id="search-engine-optimization" class="online-marketing">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
+                alt="Desk with a laptop and a notebook brainstorming SEO business model" /><img>
+            <h2>Search Engine Optimization</h2>
+            <p>
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
+            </p>
+        </section>
 
 
-            <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left"
-                    alt="a top view of people accessing social media platforms on various devices" /><img>
-                <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps
-                    you
-                    determine which platforms are suited to your brand, using analytics to find the right markets and
-                    increase your lead generation.
-                </p>
-            </section>
+        <section id="online-reputation-management" class="online-marketing">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+                alt="Laptop displaying Reputation bar graph showing an improvement overtime" /><img>
+            <h2>Online Reputation Management</h2>
+            <p>
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management
+                gives
+                you the control over what potential customers see when they search for your business.
+            </p>
+        </section>
+
+
+        <section id="social-media-marketing" class="online-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left"
+                alt="a top view of people accessing social media platforms on various devices" /><img>
+            <h2>Social Media Marketing</h2>
+            <p>
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps
+                you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
+            </p>
+        </section>
     </main>
 
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Work leading to capital gain" />
             <p> Inbound strategies for lead generation require less work for your business, bringing customers
@@ -74,7 +75,7 @@
         </div>
 
 
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="innovation and ideas" />
             <p>Users find your business through paid and organic searches, increasing the search ranking and
@@ -82,9 +83,9 @@
         </div>
 
 
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Overtime profit of bussiness"></img>
+            <img src="./assets/images/cost-management.png" alt="Overtime profit of business"></img>
             <p> As the search ranking for your business increases, your advertising costs decrease, and you no
                 longer need to advertise your page.</p>
         </div>
